# freefall_calculator

./: Ball.cpp  Ball.h  CMakeLists.txt  Cube.cpp  Cube.h  Freefall_object.cpp  Freefall_object.h  Menu.cpp  Menu.h  README.md  User_input_text.cpp  User_input_text.h  ball_drop.cpp  ball_drop.h  calculations.cpp  calculations.h  freefall_calculator.sln  freefall_calculator.vcxproj  freefall_calculator.vcxproj.filters  inputs.cpp  inputs.h  main.cpp
